Ateração no site

--- a/siteCompleto.html
+++ b/siteCompleto.html
@@ -155,7 +155,7 @@
             </div>
             <div class="card text-center">
                 <div class="card-body">
-                    <h5 class="card-title">Sobre cabelo Africano</h5>
+                    <h5 class="card-title">Sobre cabelo africano</h5>
                     <p class="card-text">O cabelo africano simboliza a cultura e a força do povo africano. </p>
                     <p class="card-text"><small class="text-muted">Atualizados 3 minutos atrás</small></p>
                 </div>
@@ -175,7 +175,7 @@
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Sobre roupas africanas</h5>
+                    <h5 class="card-title">Sobre danças africanas</h5>
                     <p class="card-text">As danças africanas integram a extensa cultura do continente africano e
                         representam uma das muitas maneiras de comunicação cultural.
 
